<resources>
    <string name="app_name" translatable="false">MyThirdApp</string>

    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="indigo" translatable="false">indigo</string>
    <string name="pink">pink</string>
    <string name="violet">violet</string>

    <string name="windows">Activate Windows</string>
    
    <string name="row_one">row one</string>
    <string name="row_two">row two</string>
    <string name="row_three">row three</string>
    <string name="row_four">row four</string>
</resources>