<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red800"
        android:text="@string/red"/>

    <Button
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange900"
        android:layout_centerHorizontal="true"
        android:text="@string/orange"/>

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow500"
        android:layout_alignParentEnd="true"
        android:text="@string/yellow"/>

    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue700"
        android:layout_centerInParent="true"
        android:text="@string/blue"/>

    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green600"
        android:layout_toStartOf="@id/blue"
        android:layout_alignBaseline="@id/blue"
        android:layout_marginEnd="10dp"
        android:text="@string/green"/>

    <Button
        android:id="@+id/indigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/indigo400"
        android:layout_toEndOf="@id/blue"
        android:layout_alignBaseline="@id/blue"
        android:layout_marginStart="10dp"
        android:text="@string/indigo"/>
    
    <Button
        android:id="@+id/violet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleA100"
        android:text="@string/violet"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>